# DAS_IR

./: README.md
task_1/: file_storage.py  hw.ipynb  seminar_00.ipynb
task_2/: classification_net_and_dssm_artifacts.ipynb  hw2.ipynb  make_net_predictions.ipynb  naive_bayes.ipynb  stacking.ipynb
task_3/: functions.py  prepare_data.ipynb  train_dssm.ipynb
task_4/: file_storage.py  page_rank.ipynb
task_5/: Makefile  main.cpp
task_7/: Makefile  main.cpp
task_8/index_compressing/: dump.py  file_storage.py  varint.cpp  varint.h
task_8/index_compressing/indexer/: CMakeLists.txt  main.cpp  plot.ipynb
task_8/index_compressing/searcher/: CMakeLists.txt  main.cpp
task_9/: baseline1.ipynb  different_catboost_models.ipynb  list_net.ipynb
